[package]
name = "rustynail"
version = "0.1.0"
authors = ["Ian Blenke <ian@blenke.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
candid = { git = "https://github.com/dfinity/candid", package = "candid" }
rust-crypto = "0.2.36"
log = "0.4.0"
pretty_env_logger = "0.4.0"
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"
diesel_migrations = { version = "1.4.0", features = ["sqlite"] }

