[package]
name = "rustynail"
version = "0.1.0"
authors = ["Ian Blenke <ian@blenke.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8"
actix-web = "1.0.0-beta"
candid = { git = "https://github.com/dfinity/candid", package = "candid" }
rust-crypto = "0.2.36"
log = "0.4.0"
pretty_env_logger = "0.4.0"
diesel = { version = "1.4.4", features = ["postgres","r2d2"] }
dotenv = "0.15.0"
diesel_migrations = { version = "1.4.0", features = ["postgres"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.1"
cargo-swagg = "0.3.0"
actix-swagger = "0.2.1"
